src/objects/Claim_Final_Payment__c.object
<CustomObject>
    <description>Final payment information for MCAR Claims</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount</description>
        <inlineHelpText>Please enter the amount (in Euro) of the payment or the write-off</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <inlineHelpText>DO NOT EDIT</inlineHelpText>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>Payment Log</relationshipLabel>
        <relationshipName>Claim_Final_Payment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount_Explanation__c</fullName>
        <description>Discount Explanation</description>
        <inlineHelpText>Provide any further details for this payment (or write-off)</inlineHelpText>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_if_any__c</fullName>
        <description>Discount (if any)</description>
        <inlineHelpText>Discount (if any)</inlineHelpText>
        <label>Discount (if any)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_update__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment2__c</fullName>
        <description>Method of Payment</description>
        <inlineHelpText>I.e. credit note?  NRE credit?  Shipping charges waived?  Product discount?</inlineHelpText>
        <label>Method of Payment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <description>Method of Payment</description>
        <inlineHelpText>I.e. credit note?  NRE credit?  Shipping charges waived?  Product discount?</inlineHelpText>
        <label>Method of Payment</label>
        <picklist>
            <controllingField>Payment_or_Discount__c</controllingField>
            <picklistValues>
                <fullName>Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffer stock of good cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>See attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduct payment in PO#26737763</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Memo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit repair - free of charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>credit note on Dec 23, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade off for product CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>free samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ppv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCI Nantong provide free products to cover NCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash-set off against NI invoce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash-set off against NI invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Write Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cash - set off against NI invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace with new cables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product shipment 1 of 2 for 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Payment__c</fullName>
        <label>Other Payment</label>
        <picklist>
            <controllingField>Method_of_Payment__c</controllingField>
            <picklistValues>
                <fullName>Inventory Swap</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Fees Waived</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment Validated</description>
        <inlineHelpText>Confirmation that payment was received (or write-off)</inlineHelpText>
        <label>Payment Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_or_Discount__c</fullName>
        <inlineHelpText>Specify whether this was a payment received, or if a certain portion of the Final Negotiated Amount needs to be reduced</inlineHelpText>
        <label>Payment or Write Off?</label>
        <picklist>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>Payment-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Payment_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Payment_Validated__c  &lt;&gt; TRUE</errorConditionFormula>
        <errorDisplayField>Payment_Validated__c</errorDisplayField>
        <errorMessage>Payment should be validated</errorMessage>
    </validationRules>
</CustomObject>